--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-TOKEN = 
-VERIFY_TOKEN =
-PHONE_NUMBER_ID = 
-WHATSAPP_BUSINESS_ID =
+PORT = 3000
+TOKEN = "YOUR_TOKEN"
+VERIFY_TOKEN = "YOUR_VERIFY_TOKEN"
+PHONE_NUMBER_ID = "YOUR_PHONE_NUMBER_ID"
+WHATSAPP_BUSINESS_ID = "YOUR_WHATSAPP_BUSINESS_ID"
+MONGO_URI = "MONGO_URI"
